--- a/install/influxdb/statefulset.yml
+++ b/install/influxdb/statefulset.yml
@@ -1,10 +1,15 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+    name: ${NAMESPACE}
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   labels:
     app: influxdb
   name: influxdb
-  namespace: default
+  namespace: ${NAMESPACE}
 spec:
   podManagementPolicy: OrderedReady
   replicas: 1
@@ -53,12 +58,29 @@ spec:
     kind: PersistentVolumeClaim
     metadata:
       name: data
+      namespace: ${NAMESPACE}
     spec:
       accessModes:
       - ReadWriteOnce
       resources:
         requests:
           storage: 10G
-      # storageClassName: dice-local-volume
-      volumeMode: Filesystem
-      volumeName: pvc-influxdb
+      # volumeMode: Filesystem
+      volumeName: pv-ebpf-influxdb
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: influxdb
+  namespace: ${NAMESPACE}
+spec:
+  ports:
+  - name: influxdb
+    port: 8086
+    protocol: TCP
+    targetPort: 8086
+  selector:
+    app: influxdb
+  sessionAffinity: None
+  type: ClusterIP
