增加influxdb的安装脚本

--- a/install/influxdb/statefulset.yml
+++ b/install/influxdb/statefulset.yml
@@ -84,3 +84,22 @@ spec:
     app: influxdb
   sessionAffinity: None
   type: ClusterIP
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: influxdb
+  namespace: ${NAMESPACE}
+spec:
+  rules:
+  - host: influxdb-ebpf.daily.terminus.io
+    http:
+      paths:
+      - backend:
+          service:
+            name: influxdb
+            port:
+              number: 8086
+        path: /
+        pathType: Prefix
