增加grafana的初始化脚本

--- a/install/config.ini
+++ b/install/config.ini
@@ -4,4 +4,5 @@ NAMESPACE=dc-ebpf
 INFLUXDB_HOST=cn-hangzhou.172.16.174.45
 INFLUXDB_PV_PATH=/data/pv-ebpf-influxdb
 [grafana]
-INFLUXDBB_PV_PATH=/data/pv-ebpf-influxdb
+GRAFANA_HOST=cn-hangzhou.172.16.174.45
+GRAFANA_PV_PATH=/data/pv-ebpf-grafana
