增加agent安装脚本, 串联各个组件的安装逻辑

--- a/install/config.ini
+++ b/install/config.ini
@@ -1,8 +1,8 @@
 [global]
-NAMESPACE=dc-ebpf
+NAMESPACE=kubebpf
 [influxdb]
 INFLUXDB_HOST=cn-hangzhou.172.16.174.45
-INFLUXDB_PV_PATH=/data/pv-ebpf-influxdb
+INFLUXDB_PV_PATH=/data/pv-kubebpf-influxdb
 [grafana]
 GRAFANA_HOST=cn-hangzhou.172.16.174.45
-GRAFANA_PV_PATH=/data/pv-ebpf-grafana
+GRAFANA_PV_PATH=/data/pv-kubebpf-grafana
