--- a/install/grafana/pv.yaml
+++ b/install/grafana/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-ebpf-grafana
+  name: pv-kubebpf-grafana
 spec:
   accessModes:
   - ReadWriteOnce
