--- a/install/influxdb/pv.yaml
+++ b/install/influxdb/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-ebpf-influxdb
+  name: pv-kubebpf-influxdb
 spec:
   accessModes:
   - ReadWriteOnce
