调整request-log daashboard的细节

--- a/install/config.ini
+++ b/install/config.ini
@@ -1,8 +1,10 @@
 [global]
 NAMESPACE=kubebpf
 [influxdb]
+;influxdb requires persistent storage. please create a directory on the node
 INFLUXDB_HOST=cn-hangzhou.172.16.174.45
 INFLUXDB_PV_PATH=/data/pv-kubebpf-influxdb
 [grafana]
+;grafana requires persistent storage. please create a directory on the node
 GRAFANA_HOST=cn-hangzhou.172.16.174.45
 GRAFANA_PV_PATH=/data/pv-kubebpf-grafana
